test key verification

--- a/public/assets/scss/global/_global.scss
+++ b/public/assets/scss/global/_global.scss
@@ -1047,7 +1047,7 @@ input[type='file'].hide-input {
 .pencil-background {
     background-image: url(/assets/images/pencil.svg);
     background-size: 20px auto;
-    padding-right: 20px;
+    padding-right: 25px !important;
     background-position: center right;
     background-repeat: no-repeat;
 }
