--- a/public/assets/css/admin.css
+++ b/public/assets/css/admin.css
@@ -807,6 +807,41 @@
     -moz-border-radius: 0 4px 4px 0;
     -ms-border-radius: 0 4px 4px 0;
     border-radius: 0 4px 4px 0; }
+.module.camping-for-validation .proof-success {
+  display: none;
+  padding-left: 15px;
+  padding-right: 15px;
+  color: #239234; }
+.module.camping-for-validation .proof-of-address {
+  background-color: #eaeaea; }
+  .module.camping-for-validation .proof-of-address.proof-failed {
+    background-color: #ff8d8d; }
+  .module.camping-for-validation .proof-of-address .upload-file-container button {
+    margin: 0;
+    padding: 0;
+    border: 0;
+    width: 100%;
+    background: transparent; }
+    .module.camping-for-validation .proof-of-address .upload-file-container button label {
+      width: 100%;
+      display: block;
+      padding: 0;
+      margin: 0; }
+  .module.camping-for-validation .proof-of-address .file-name {
+    word-break: break-word; }
+  .module.camping-for-validation .proof-of-address .checkbox-container {
+    padding-top: 10px; }
+    .module.camping-for-validation .proof-of-address .checkbox-container input[type="checkbox"] {
+      width: auto;
+      height: auto; }
+    .module.camping-for-validation .proof-of-address .checkbox-container .pretty label {
+      padding-top: 3px;
+      padding-left: 5px;
+      cursor: pointer;
+      width: 100%; }
+      .module.camping-for-validation .proof-of-address .checkbox-container .pretty label i {
+        display: inline;
+        padding-left: 5px; }
 
 body {
   background-color: #222d32; }
