--- a/public/assets/scss/pages/logged-in/_manage-privacy.scss
+++ b/public/assets/scss/pages/logged-in/_manage-privacy.scss
@@ -1,6 +1,9 @@
 .manage-privacy-container {
-    .delete, .download {
-        > figure {
+    .delete-local-storage-border-bottom {
+        border-bottom: 3px solid black;
+    }
+    .delete, .download, .delete-local-storage {
+        figure {
             width: 100px;
         }
         .text {
