--- a/public/assets/scss/style.scss
+++ b/public/assets/scss/style.scss
@@ -24,6 +24,7 @@
 @import "pages/logged-in/patient/patient-review-assurance-contract";
 @import "pages/logged-in/patient/patient-contratulations";
 @import "pages/logged-in/patient/contract-single-page";
+@import "pages/logged-in/my-contracts";
 
 
 
