--- a/public/assets/scss/pages/logged-in/_my-contracts.scss
+++ b/public/assets/scss/pages/logged-in/_my-contracts.scss
@@ -92,5 +92,12 @@
                 }
             }
         }
+        .contract-details {
+            a {
+                &:hover {
+                    text-decoration: underline;
+                }
+            }
+        }
     }
 }
