--- a/public/assets/scss/additionals/_modules.scss
+++ b/public/assets/scss/additionals/_modules.scss
@@ -700,6 +700,9 @@
         }
         .proof-of-address {
             background-color: #eaeaea;
+            &.no-background {
+                background-color: transparent;
+            }
             &.proof-failed {
                 background-color: #ff8d8d;
             }
@@ -715,7 +718,21 @@
                         display: block;
                         padding: 0;
                         margin: 0;
+                        min-height: 65px;
+                        position: relative;
+                        span {
+                            width: 95%;
+                            @include vertical-horizontal-align(absolute);
+                        }
                     }
+                }
+            }
+            .enter-private-key {
+                min-height: 65px;
+                position: relative;
+                span {
+                    width: 95%;
+                    @include vertical-horizontal-align(absolute);
                 }
             }
             .file-name {
