test contract creation

--- a/public/assets/scss/pages/logged-in/dentist/_dentist-create-contract.scss
+++ b/public/assets/scss/pages/logged-in/dentist/_dentist-create-contract.scss
@@ -49,6 +49,9 @@
                             }
                         }
                     }
+                    .signature-wrapper canvas {
+                        height: 150px;   
+                    }
                 }
                 .terms-and-conditions-long-list {
                     height: 350px;
