--- a/public/assets/scss/style.scss
+++ b/public/assets/scss/style.scss
@@ -25,6 +25,8 @@
 @import "pages/logged-in/patient/patient-contratulations";
 @import "pages/logged-in/patient/contract-single-page";
 @import "pages/logged-in/my-contracts";
+@import "pages/logged-in/dentist/homepage-no-contracts";
+@import "pages/logged-in/dentist/homepage-contracts";
 
 
 
