--- a/public/assets/scss/additionals/_modules.scss
+++ b/public/assets/scss/additionals/_modules.scss
@@ -89,6 +89,18 @@
     }
 }
 
+.black-light-gray-btn {
+    background-color: #ffffff;
+    color: $dark_color;
+    font-size: 20px;
+    padding: 5px 25px;
+    font-family: 'Calibri-Regular';
+    border: 2px solid white;
+    display: inline-block;
+    cursor: pointer;
+    @include rounded(4px);
+}
+
 .social-login-btn {
     background-color: white;
     width: 100%;
@@ -436,11 +448,20 @@
             padding: 15px;
             @include rounded(6px);
             @include box-shadow(0 2px 6px 0 rgba(0,0,0,.4));
-            figure {
+            .figure-container {
                 width: 120px;
-                overflow: hidden;
-                @include rounded(6px);
-                figcaption {
+                figure {
+                    width: 100%;
+                    height: 100px;
+                    overflow: hidden;
+                    position: relative;
+                    @include rounded(6px);
+                    img {
+                        @include vertical-horizontal-align(absolute);
+                        @include rounded(6px);
+                    }
+                }
+                .status {
                     display: block;
                     color: white;
                 }
@@ -459,37 +480,29 @@
         }
         &.pending {
             .tile-wrapper {
-                figure {
-                    figcaption {
-                        background-color: $pending;
-                    }
+                .status {
+                    background-color: $pending;
                 }
             }
         }
         &.active {
             .tile-wrapper {
-                figure {
-                    figcaption {
-                        background-color: $active;
-                    }
+                .status {
+                    background-color: $active;
                 }
             }
         }
         &.awaiting-payment, &.awaiting-approval {
             .tile-wrapper {
-                figure {
-                    figcaption {
-                        background-color: $awaiting_payment_awaiting_approval;
-                    }
+                .status {
+                    background-color: $awaiting_payment_awaiting_approval;
                 }
             }
         }
         &.cancelled {
             .tile-wrapper {
-                figure {
-                    figcaption {
-                        background-color: $cancelled;
-                    }
+                .status {
+                    background-color: $cancelled;
                 }
             }
         }
