--- a/public/assets/scss/pages/logged-in/_my-contracts.scss
+++ b/public/assets/scss/pages/logged-in/_my-contracts.scss
@@ -1,6 +1,9 @@
 .my-contracts {
     .table-container {
         padding-top: 30px;
+        .hide-this {
+            display: none;
+        }
         .dataTables_empty {
             text-align: center;
         }
@@ -37,25 +40,101 @@
         .dataTables_filter {
             text-align: center;
             padding-bottom: 15px;
+            font-size: 0;
             label {
                 font-size: 0;
-                display: block;
+                width: 300px;
+                margin-left: calc(50% - 150px);
+                display: inline-block;
                 input {
                     font-size: 16px;
                     width: 100%;
                     display: block;
-                    max-width: 350px;
                     margin: 0 auto;
                     font-weight: normal;
+                    @include simple_transition(none);
+                }
+            }
+            .custom-filter {
+                width: calc(50% - 150px);
+                display: inline-block;
+                .custom-btn {
+                    font-size: 20px;
+                    text-align: right;
+                    display: block;
+                    position: relative;
+                    color: $dark_color;
+                    .filter-icon {
+                        width: 20px;
+                    }
+                    .caret-down {
+                        width: 10px;
+                        margin-left: 5px;
+                    }
+                    .custom-filter-body {
+                        position: absolute;
+                        right: 0;
+                        top: 100%;
+                        display: none;
+                        text-align: left;
+                        width: 250px;
+                        background: white;
+                        padding: 15px 25px;
+                        z-index: 10;
+                        @include rounded(4px);
+                        @include box-shadow(0 2px 6px 0 rgba(0,0,0,.4));
+                        .filter-row {
+                            label {
+                                font-size: 16px;
+                                width: auto;
+                                margin: 0;
+                                vertical-align: middle;
+                                cursor: pointer;
+                                @include simple_transition(.3s);
+                            }
+                            input[type='checkbox'] {
+                                margin: 0;
+                                vertical-align: middle;
+                            }
+                            &:hover {
+                                label {
+                                    color: $blue_green_color;
+                                }
+                            }
+                        }
+                    }
+                    &:hover {
+                        .custom-filter-body {
+                            display: block;
+                        }
+                    }
                 }
             }
         }
         .dataTables_paginate {
             text-align: center;
+            padding-top: 25px;
             a {
-                display: inline-block;
-                padding: 0 10px;
+                color: #000;
+                padding: 0 5px;
                 cursor: pointer;
+            }
+            span {
+                display: inline-block;
+                a {
+                    padding: 0 10px;
+                    margin: 0 4px;
+                    cursor: pointer;
+                    width: 30px;
+                    line-height: 30px;
+                    height: 30px;
+                    display: inline-block;
+                    background-color: #fff;
+                    color: #000;
+                    border: 1px solid #000;
+                    font-family: 'Calibri-Regular';
+                    @include rounded(50%);
+                }
             }
             .disabled {
                 display: none;
@@ -89,6 +168,9 @@
                 }
                 &.awaiting-approval {
                     background-color: $awaiting_payment_awaiting_approval;
+                }
+                &.cancelled {
+                    background-color: $cancelled;
                 }
             }
         }
