--- a/public/assets/css/admin.css
+++ b/public/assets/css/admin.css
@@ -894,6 +894,10 @@
       .module.camping-for-validation .proof-of-address .checkbox-container .pretty label i {
         display: inline;
         padding-left: 5px; }
+.module.suggester-parent .suggester-map-div {
+  height: 200px;
+  display: none;
+  background: transparent; }
 
 body {
   background-color: #222d32; }
