--- a/public/assets/scss/additionals/_modules.scss
+++ b/public/assets/scss/additionals/_modules.scss
@@ -772,4 +772,11 @@
             }
         }
     }
+    &.suggester-parent {
+        .suggester-map-div {
+            height: 200px;
+            display: none;
+            background: transparent;
+        }
+    }
 }
