--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -4541,9 +4541,14 @@ fieldset {
         .bootbox.login-signin-popup .modal-dialog .modal-content .modal-body .popup-body .dentist {
           background: white;
           color: #212121; }
+          .bootbox.login-signin-popup .modal-dialog .modal-content .modal-body .popup-body .dentist .call-sign-up {
+            font-family: 'Calibri-Bold';
+            color: #212121;
+            font-size: 16px;
+            text-decoration: underline; }
           .bootbox.login-signin-popup .modal-dialog .modal-content .modal-body .popup-body .dentist .popup-half-footer {
             padding: 30px 0;
-            margin-top: 80px;
+            margin-top: 50px;
             margin-left: -15%;
             margin-right: -15%;
             text-align: center;
@@ -4553,7 +4558,7 @@ fieldset {
             .bootbox.login-signin-popup .modal-dialog .modal-content .modal-body .popup-body .dentist .popup-half-footer a {
               font-family: 'Calibri-Bold';
               color: #212121;
-              font-size: 20px;
+              font-size: 16px;
               text-decoration: underline; }
           .bootbox.login-signin-popup .modal-dialog .modal-content .modal-body .popup-body .dentist .form-register .step {
             display: none; }
