--- a/public/assets/scss/pages/logged-in/_global.scss
+++ b/public/assets/scss/pages/logged-in/_global.scss
@@ -89,6 +89,7 @@ body.logged-in {
                             .svg {
                                 left: 1px;
                                 top: 1px;
+                                border-color: $blue_green_color !important;   
                             }
                             i {
                                 left: 1px;
