--- a/public/assets/scss/pages/logged-in/dentist/_dentist-create-contract.scss
+++ b/public/assets/scss/pages/logged-in/dentist/_dentist-create-contract.scss
@@ -17,6 +17,9 @@
             &.three {
                 .show-on-services-pick {
                     display: none;
+                    &.renew-contract {
+                        display: block;
+                    }
                 }
                 .show-category-list {
                     ul {
