--- a/public/assets/scss/additionals/_animations.scss
+++ b/public/assets/scss/additionals/_animations.scss
@@ -30,3 +30,13 @@
         opacity: 1;
     }
 }
+
+@-moz-keyframes spin { 100% { -moz-transform: rotate(360deg); } }
+@-webkit-keyframes spin { 100% { -webkit-transform: rotate(360deg); } }
+@keyframes spin { 100% { -webkit-transform: rotate(360deg); transform:rotate(360deg); } }
+
+.rotate-animation {
+    -webkit-animation: spin .9s linear infinite;
+    -moz-animation: spin .9s linear infinite;
+    animation: spin .9s linear infinite;
+}
