--- a/public/assets/scss/pages/logged-in/_edit-account.scss
+++ b/public/assets/scss/pages/logged-in/_edit-account.scss
@@ -5,6 +5,9 @@ section.edit-account {
             border: 0;
             background-color: white !important;
             padding: 12px 15px;
+            .filter-option-inner-inner {
+                font-size: 16px;
+            }
         }
         .dropdown-menu {
             width: 100%;
