fix register in mozilla

--- a/public/assets/scss/additionals/_modules.scss
+++ b/public/assets/scss/additionals/_modules.scss
@@ -485,6 +485,16 @@
                     display: block;
                     color: white;
                 }
+                &.show-status {
+                    width: 120px;
+                    overflow: hidden;
+                    position: relative;
+                    figure {
+
+                        @include vertical-horizontal-align(absolute);
+                        @include rounded(6px);
+                    }
+                }
             }
             .contract-info {
                 width: calc(100% - 120px);
