--- a/public/assets/scss/additionals/_modules.scss
+++ b/public/assets/scss/additionals/_modules.scss
@@ -266,7 +266,7 @@
         input[type="file"] {
             display: none;
         }
-        button {
+        .btn-wrapper {
             display: block;
             width: 100%;
             padding: 0;
