--- a/public/assets/scss/additionals/_modules.scss
+++ b/public/assets/scss/additionals/_modules.scss
@@ -469,7 +469,7 @@
             @include rounded(6px);
             @include box-shadow(0 2px 6px 0 rgba(0,0,0,.4));
             .figure-container {
-                width: 120px;
+                width: 140px;
                 figure {
                     width: 100%;
                     height: 100px;
@@ -477,27 +477,22 @@
                     position: relative;
                     @include rounded(6px);
                     img {
+                        height: 100%;
+                        max-width: none;
                         @include vertical-horizontal-align(absolute);
                         @include rounded(6px);
                     }
-                }
-                .status {
-                    display: block;
-                    color: white;
-                }
-                &.show-status {
-                    width: 120px;
-                    overflow: hidden;
-                    position: relative;
-                    figure {
-
-                        @include vertical-horizontal-align(absolute);
-                        @include rounded(6px);
+                    figcaption {
+                        z-index: 5;
+                        position: absolute;
+                        bottom: 0;
+                        width: 100%;
+                        color: white;
                     }
                 }
             }
             .contract-info {
-                width: calc(100% - 120px);
+                width: calc(100% - 140px);
                 padding-left: 15px;
                 .btn-container {
                     text-align: right;
@@ -510,28 +505,28 @@
         }
         &.pending {
             .tile-wrapper {
-                .status {
+                figcaption {
                     background-color: $pending;
                 }
             }
         }
         &.active {
             .tile-wrapper {
-                .status {
+                figcaption {
                     background-color: $active;
                 }
             }
         }
         &.awaiting-payment, &.awaiting-approval {
             .tile-wrapper {
-                .status {
+                figcaption {
                     background-color: $awaiting_payment_awaiting_approval;
                 }
             }
         }
         &.cancelled {
             .tile-wrapper {
-                .status {
+                figcaption {
                     background-color: $cancelled;
                 }
             }
