--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -5482,6 +5482,8 @@ input[type='file'].hide-input {
     .module.contract-tile .tile-wrapper .contract-info {
       width: calc(100% - 140px);
       padding-left: 15px; }
+      .module.contract-tile .tile-wrapper .contract-info .title {
+        word-wrap: break-word; }
       .module.contract-tile .tile-wrapper .contract-info .btn-container {
         text-align: right; }
         .module.contract-tile .tile-wrapper .contract-info .btn-container .white-blue-green-btn {
