--- a/public/assets/css/admin.css
+++ b/public/assets/css/admin.css
@@ -901,27 +901,21 @@
     background-color: transparent; }
   .module.camping-for-validation .proof-of-address.proof-failed {
     background-color: #ff8d8d; }
-  .module.camping-for-validation .proof-of-address .upload-file-container button {
-    margin: 0;
-    padding: 0;
-    border: 0;
+  .module.camping-for-validation .proof-of-address .upload-file-container .btn-wrapper label {
     width: 100%;
-    background: transparent; }
-    .module.camping-for-validation .proof-of-address .upload-file-container button label {
-      width: 100%;
-      display: block;
-      padding: 0;
-      margin: 0;
-      min-height: 65px;
-      position: relative; }
-      .module.camping-for-validation .proof-of-address .upload-file-container button label span {
-        width: 95%;
-        position: absolute;
-        top: 50%;
-        left: 50%;
-        -webkit-transform: translate(-50%, -50%);
-        -ms-transform: translate(-50%, -50%);
-        transform: translate(-50%, -50%); }
+    display: block;
+    padding: 0;
+    margin: 0;
+    min-height: 65px;
+    position: relative; }
+    .module.camping-for-validation .proof-of-address .upload-file-container .btn-wrapper label span {
+      width: 95%;
+      position: absolute;
+      top: 50%;
+      left: 50%;
+      -webkit-transform: translate(-50%, -50%);
+      -ms-transform: translate(-50%, -50%);
+      transform: translate(-50%, -50%); }
   .module.camping-for-validation .proof-of-address .enter-private-key {
     min-height: 65px;
     position: relative; }
