--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -5708,20 +5708,20 @@ input[type='file'].hide-input {
     background-color: transparent; }
   .module.camping-for-validation .proof-of-address.proof-failed {
     background-color: #ff8d8d; }
-  .module.camping-for-validation .proof-of-address .upload-file-container button {
+  .module.camping-for-validation .proof-of-address .upload-file-container .btn-wrapper {
     margin: 0;
     padding: 0;
     border: 0;
     width: 100%;
     background: transparent; }
-    .module.camping-for-validation .proof-of-address .upload-file-container button label {
+    .module.camping-for-validation .proof-of-address .upload-file-container .btn-wrapper label {
       width: 100%;
       display: block;
       padding: 0;
       margin: 0;
       min-height: 65px;
       position: relative; }
-      .module.camping-for-validation .proof-of-address .upload-file-container button label span {
+      .module.camping-for-validation .proof-of-address .upload-file-container .btn-wrapper label span {
         width: 95%;
         position: absolute;
         top: 50%;
