--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -5714,7 +5714,8 @@ input[type='file'].hide-input {
     padding: 0;
     margin: 0;
     min-height: 65px;
-    position: relative; }
+    position: relative;
+    text-align: center; }
     .module.camping-for-validation .proof-of-address .upload-file-container .btn-wrapper label span {
       width: 95%;
       position: absolute;
