add ipfs warning

--- a/public/assets/css/admin.css
+++ b/public/assets/css/admin.css
@@ -717,6 +717,8 @@
         text-decoration: underline; }
       .module.contract-single-page-nav li a.renew-contract-btn i {
         color: #239234; }
+    .module.contract-single-page-nav li i.fa-info-circle {
+      padding-left: 5px; }
 .module.single-contract-tile .contract-participant {
   -webkit-border-radius: 6px;
   -moz-border-radius: 6px;
