--- a/public/assets/scss/additionals/_modules.scss
+++ b/public/assets/scss/additionals/_modules.scss
@@ -569,6 +569,9 @@
                     }
                 }
             }
+            i.fa-info-circle {
+                padding-left: 5px;
+            }
         }
     }
     &.single-contract-tile {
