--- a/public/assets/scss/global/_global.scss
+++ b/public/assets/scss/global/_global.scss
@@ -1170,3 +1170,7 @@ input[type='file'].hide-input {
     background-position: center right;
     background-repeat: no-repeat;
 }
+
+.popover-el {
+    cursor: pointer;
+}
