test contact with clinic

--- a/public/assets/scss/pages/logged-in/_global.scss
+++ b/public/assets/scss/pages/logged-in/_global.scss
@@ -170,7 +170,7 @@ body.logged-in {
 }
 
 .bootbox {
-    &.invite-dentists-popup {
+    &.before-sending-email-confirmation-popup {
         .modal-dialog {
             width: 100%;
             max-width: 800px;
