test contact with clinic

--- a/public/assets/scss/additionals/_modules.scss
+++ b/public/assets/scss/additionals/_modules.scss
@@ -329,6 +329,9 @@
                     padding-bottom: 5px;
                     display: block;
                 }
+                &.cursor-pointer {
+                    cursor: pointer;
+                }
             }
             .right-field {
                 width: 60%;
