--- a/public/assets/css/admin.css
+++ b/public/assets/css/admin.css
@@ -229,7 +229,7 @@
   border: 2px solid #126585;
   display: inline-block;
   cursor: pointer;
-  text-decoration: none;
+  text-decoration: none !important;
   -webkit-border-radius: 4px;
   -moz-border-radius: 4px;
   -ms-border-radius: 4px;
@@ -500,6 +500,8 @@
       padding-top: 5px;
       padding-bottom: 5px;
       display: block; }
+    .module.step-fields .single-row label.cursor-pointer {
+      cursor: pointer; }
   .module.step-fields .single-row .right-field {
     width: 60%;
     padding: 20px 10px;
