--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -5315,6 +5315,8 @@ input[type='file'].hide-input {
       padding-top: 5px;
       padding-bottom: 5px;
       display: block; }
+    .module.step-fields .single-row label.cursor-pointer {
+      cursor: pointer; }
   .module.step-fields .single-row .right-field {
     width: 60%;
     padding: 20px 10px;
