test contact with clinic

--- a/public/assets/css/admin.css
+++ b/public/assets/css/admin.css
@@ -591,6 +591,12 @@
       transform: translate(-50%, -50%); }
   .module.contract-proposal .wrapper .terms-and-conditions-long-list {
     height: 350px; }
+    .module.contract-proposal .wrapper .terms-and-conditions-long-list h2, .module.contract-proposal .wrapper .terms-and-conditions-long-list h3 {
+      border: 0; }
+    .module.contract-proposal .wrapper .terms-and-conditions-long-list ul {
+      padding-left: 20px; }
+      .module.contract-proposal .wrapper .terms-and-conditions-long-list ul li {
+        list-style: disc inside none; }
   .module.contract-proposal .wrapper .mCSB_inside > .mCSB_container {
     margin-right: 35px !important; }
   .module.contract-proposal .wrapper .mCSB_scrollTools {
